src/objects/ffps_brunt__BBC_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ffps_brunt__CashMatchingLimit__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Cash Matching Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Contract_Active_Status__c</fullName>
        <inlineHelpText>Status at which the contract is considered &apos;Active&apos;. If no status is specified the default status of &apos;Activated&apos; will be used.</inlineHelpText>
        <label>Contract Active Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Contract_Changes_Active_Status__c</fullName>
        <inlineHelpText>Status at which the contract has changes active. If no status is specified the default status of &apos;Changes Active&apos; will be used.</inlineHelpText>
        <label>Contract Changes Active Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Default_Billing_Term_ID__c</fullName>
        <inlineHelpText>Default billing term for use when automatically creating contract lines.</inlineHelpText>
        <label>Default Billing Term ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DeleteStagingRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Staging Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Deposit_Product_ID__c</fullName>
        <label>Deposit Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DisableEmailNotifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Disable_Billing_Schedule_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disable Billing Schedule Trigger</inlineHelpText>
        <label>Disable Billing Schedule Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Disable_Contract_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disable the Contract trigger</inlineHelpText>
        <label>Disable Contract Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Disable_Deposit_Paid_Status_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disable the deposit paid status tigger on the c2g__codaCashEntryLineItem__c object</inlineHelpText>
        <label>Disable Deposit Paid Status Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Disable_Sales_Credit_Note_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Sales Credit Note Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Disable_Sales_Invoice_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Sales Invoice Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Disable_Transaction_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Transaction Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__MaxSalesInvoiceLines__c</fullName>
        <defaultValue>250</defaultValue>
        <label>Max Sales Invoice Lines</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__PostSalesCreditNote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Sales Credit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__PostSalesInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Sales Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Sales_Credit_Rule__c</fullName>
        <inlineHelpText>Sales Credit ClickLink rule id to use when automatically crediting a sales invoice on a billing document due to changes in the contract (for example the date).</inlineHelpText>
        <label>Sales Credit ClickLink Rule ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Bruntwood Billing Central Settings</label>
</CustomObject>